common/linkding/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: linkding
  namespace: linkding
  labels:
    app.kubernetes.io/name: linkding
    app.kubernetes.io/instance: linkding
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: linkding
    app.kubernetes.io/instance: linkding
  ports:
    - name: http
      port: 9090
      targetPort: http
      protocol: TCP
